# linux1

task1/: CMakeLists.txt  a.out  fs  main.c  minifs
task1/src/: bitmaps.c  bitmaps.h  dirs.c  dirs.h  exit_codes.h  files.c  files.h  fs.c  fs.h  main.c
task2/: CMakeLists.txt  minifs
task2/src/: client.c  main.c  server.c
